--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,16 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <style>
       html, body {
         width: 100%;
         height: 100%;
-        font-family: 'Source Code Pro', monospace;
+        font-family: Helvetica Neue, Helvetica, Segoe UI, Arial, sans-serif;
       }
     </style>
   </head>
   <body>
-    <div id="flovv"></div>
+    <div id="flovv" style="width: 100%; height: 100%; display: flex; flex-flow: column nowrap; overflow: hidden"></div>
   </body>
 </html>
